# my-ci-cd-project

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt  test_app.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: codeql-analysis.yml  test.yml
templates/: index.html
